- PCRE:
  . Removed support for the /e (PREG_REPLACE_EVAL) modifier. (Nikita)

- PDO:
  . Fixed bug #59450 (./configure fails with "Cannot find php_pdo_driver.h").
    (maxime dot besson at smile dot fr)

- PDO_mysql:
  . Fixed bug #68424 (Add new PDO mysql connection attr to control multi
    statements option). (peter dot wolanin at acquia dot com)

- Reflection
  . Fixed inheritance chain of Reflector interface. (Tjerk)

- Session:
  . Fixed bug #67694 (Regression in session_regenerate_id()). (Tjerk)
  . Fixed bug #68941 (mod_files.sh is a bash-script). (bugzilla at ii.nl, Yasuo)

- SOAP:
  . Fixed bug #68361 (Segmentation fault on SoapClient::__getTypes). (Laruence)

- SPL:
  . Implemented #67886 (SplPriorityQueue/SplHeap doesn't expose extractFlags
    nor curruption state). (Julien)
  . Fixed bug #66405 (RecursiveDirectoryIterator::CURRENT_AS_PATHNAME
    breaks the RecursiveIterator). (Paul Garvin)
  . Fixed bug #68479 (Added escape parameter to SplFileObject::fputcsv). (Salathe)

- Sqlite3:
  . Fixed bug #68260 (SQLite3Result::fetchArray declares wrong
    required_num_args). (Julien)

- Standard:
  . Removed call_user_method() and call_user_method_array() functions. (Kalle)
  . Fixed user session handlers (See rfc:session.user.return-value). (Sara)
  . Added intdiv() function. (Andrea)
  . Improved precision of log() function for base 2 and 10. (Marc Bennewitz)
  . Remove string category support in setlocale(). (Nikita)
  . Remove set_magic_quotes_runtime() and its alias magic_quotes_runtime().
    (Nikita)
  . Fixed bug #65272 (flock() out parameter not set correctly in windows).
    (Daniel Lowrey)

- Streams:
  . Fixed bug #68532 (convert.base64-encode omits padding bytes).
    (blaesius at krumedia dot de)
  . Removed set_socket_blocking() in favor of its alias stream_set_blocking().
    (Nikita)

- XSL:
  . Fixed bug #64776 (The XSLT extension is not thread safe). (Mike)

<<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>